# pyright-verifytypes-poetry

./: pyproject.toml
pyright_verifytypes_poetry/: __init__.py  thing.py
tests/: test_pyright_verifytypes_poetry.py
